--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -13,17 +13,17 @@
   box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
-    padding: 0 20px;
+    padding: 0 $base-indent;
     min-height: 80px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 40px;
+    padding: 0 $alt-indent;
   }
 }
 
 .header__logo-wrapper {
-  margin-left: 20px;
+  margin-left: $base-indent;
   margin-right: auto;
 
   @media (min-width: $tablet-width) {
@@ -64,7 +64,7 @@
 }
 
 .header__text {
-  margin-left: 20px;
+  margin-left: $base-indent;
   max-width: 126px;
 
   display: none;
