--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -55,7 +55,7 @@
 
 .products__list {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: $alt-indent;
   padding: 0;
   list-style: none;
 
@@ -74,14 +74,14 @@
 }
 
 .products__item {
-  padding: 40px 20px 20px;
+  padding: 40px $base-indent 20px;
 
   text-align: left;
   background-color: $base-white;
   border-radius: 4px;
 
   &:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: $base-indent;
   }
 
   &:hover,
@@ -141,7 +141,7 @@
   line-height: 20px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 20px;
+    margin-bottom:$base-indent;
   }
 }
 
