--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,7 +1,8 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-regular.woff2") format("woff2");
-  src: url("../../fonts/montserrat-regular.woff") format("woff");
+  src:
+    url("../fonts/montserrat-regular.woff2") format("woff2"),
+    url("../fonts/montserrat-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,8 +10,9 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-medium.woff2") format("woff2");
-  src: url("../../fonts/montserrat-medium.woff") format("woff");
+  src:
+    url("../fonts/montserrat-medium.woff2") format("woff2"),
+    url("../fonts/montserrat-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -18,8 +20,9 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-semibold.woff2") format("woff2");
-  src: url("../../fonts/montserrat-semibold.woff") format("woff");
+  src:
+    url("../fonts/montserrat-semibold.woff2") format("woff2"),
+    url("../fonts/montserrat-semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -27,8 +30,9 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-bold.woff2") format("woff2");
-  src: url("../../fonts/montserrat-bold.woff") format("woff");
+  src:
+    url("../fonts/montserrat-bold.woff2") format("woff2"),
+    url("../fonts/montserrat-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -36,8 +40,9 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-extrabold.woff2") format("woff2");
-  src: url("../../fonts/montserrat-extrabold.woff") format("woff");
+  src:
+    url("../fonts/montserrat-extrabold.woff2") format("woff2"),
+    url("../fonts/montserrat-extrabold.woff") format("woff");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
